Add token authentication
